<resources>
    <string name="app_name">Suez CRM</string>
    <string name="name">Full Name</string>
    <string name="imei">IMEI</string>
    <string name="cannot_be_empty">Cannot Be Empty</string>
    <string name="empty">Empty!</string>
    <string name="forgot_pin_dialog">Forgot mPIN</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="complaint">Complaint</string>
    <string name="request">Request</string>
    <string name="noConsumer">No Consumer</string>
    <string name="employee_id">Employee username</string>
    <string name="forgot_pin">Forgot mPIN?</string>
    <string name="admin_logout">You have been forcefully logged out, to re-login connect your internet &amp; login.</string>
    <string name="session_timeout">Session Timeout.</string>
    <string name="request_pin">Request Pin</string>
    <string name="or_use">or Use</string>
    <string name="enter_4_digit_pin">Enter 4 digit mPIN</string>
    <string name="language">Language</string>
    <string name="change_mpin">Change M-Pin</string>
    <string name="old_pin">Enter Old M-Pin</string>
    <string name="new_pin">Enter New M-Pin</string>
    <string name="change_pin">Change M-Pin</string>
    <string name="confirm_new_pin">Confirm New M-Pin</string>
    <string name="set_imei">SET IMEI</string>
    <string name="go_to_settings">Go to settings -></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complaint_reg_history">Registration</string>
    <string name="work_allocation">Work Allocated</string>
    <string name="work_reallocation">Work  ReAllocated</string>
    <string name="work_completion">Work Completed</string>
    <string name="disconection_meter">Disconnection Meter</string>
    <string name="reconnection_meter">Reconnection Meter</string>
    <string name="show">Show</string>
    <string name="filter">Filter</string>
    <string name="compliant_registration">Complaint Registration</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="search_by">Search By</string>
    <string name="selectEmployee">Select Employee</string>
    <string name="job_card">Job Card</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="finish_fwd_to_section">Finish/Fwd to Section</string>
    <string name="fill_details">Fill Details</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="work_completion_date_amp_time"><![CDATA[Work Completion Date & Time]]></string>
    <string name="remark">Remarks *</string>
    <string name="remark_160_character">Remarks 160 character only</string>
    <string name="proceed">Proceed</string>
    <string name="pls_enter_otp_below">Please enter otp below</string>
    <string name="otp">OTP</string>
    <string name="submit_without_otp">Submit without OTP</string>
    <string name="go_back">Go Back</string>
    <string name="pls_enter_reason_for_with_out_otp">Please enter reason for without Otp</string>
    <string name="reason">Reason</string>
    <string name="new_connection_request">New Connection Request</string>
    <string name="existing_connection_request">Existing Connection Request</string>
    <string name="application_request">Application Request</string>
    <string name="authentication_application"><![CDATA[Authentication & Application(CC)]]></string>
    <string name="authentication_application_details"><![CDATA[Authentication & Application Details]]></string>
    <string name="application_status">Application Status</string>
    <string name="permanent_connection">Permanent Connection</string>
    <string name="temporary_connection">Temporary Connection</string>
    <string name="app_request_date">Application Request Date</string>
    <string name="date">16-Mar-2019 11:41 AM</string>
    <string name="next">NEXT</string>
    <string name="fixer_name">Fixer Name</string>
    <string name="middle_name_mandatory" translatable="false">Middle Name </string>
    <string name="first_name_mandatory">First Name *</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name_mandatory">Last Name *</string>
    <string name="connection_request">Connection Request</string>
    <string name="select_options">Select Options</string>
    <string name="consumer_details">Consumer Details</string>
    <string name="connection_type">Connection Type</string>
    <string name="landlord_owner_name">Landlord/Owner Name*</string>
    <string name="owner_address">Address*</string>
    <string name="owner_contact_number">Contact Number*</string>
    <string name="connection_details">Connection Details</string>
    <string name="_91">+91</string>
    <string name="mobile_no">Mobile No</string>
    <string name="alt_mobile_no">Alternate Mobile No</string>
    <string name="sec_no">Secondary Mobile No</string>
    <string name="mobile_no_mandatory">Mobile No.*</string>
    <string name="land_line_no">Landline No.</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="name_in_marathi">Name In Marathi</string>
    <string name="only_indian_number_allowed">Only Indian Numbers are Allowed</string>
    <string name="owner_info">Owner Info</string>
    <string name="id_proof">ID Proof</string>
    <string name="address_proof">Address Proof</string>
    <string name="mandatory_documents">Mandatory Documents</string>
    <string name="noc">NOC</string>
    <string name="document_for_all_new_connections">Document for All New Connections</string>
    <string name="page_1_of">Page 1 of</string>
    <string name="_4">4</string>
    <string name="site_address">Site Address</string>
    <string name="addr_line_1">Addr. Line 1*</string>
    <string name="addr_line_2">Addr. Line 2</string>
    <string name="landmark">Landmark</string>
    <string name="taluka">Taluka</string>
    <string name="pin_code">Pin code*</string>
    <string name="address_in_marathi">Address In Marathi</string>
    <string name="billing_address">Billing Address</string>
    <string name="same_as_site_above">Same as above</string>
    <string name="consumer_area_details">Consumer Area Details</string>
    <string name="near_by_consumer_no">Near By Consumer ID*</string>
    <string name="calculate_charges">Calculate Charges</string>
    <string name="total_amount">Total Amount</string>
    <string name="app_fee">App. Fee</string>
    <string name="connection_start_date">Connection Start Date*</string>
    <string name="connection_status">Connection Status*</string>
    <string name="connection_end_date">Connection End Date*</string>
    <string name="enter_days">Enter days*</string>
    <string name="invalidate_number">Invalidate Number</string>
    <string name="generate_demand">Generate Demand</string>
    <string name="status_date">Status Date </string>
    <string name="discon_date">Disconnection Date </string>
    <string name="remarks">Remarks </string>
    <string name="govt_emp">Govt. Emp </string>
    <string name="source_type">Source</string>
    <string name="meeting_date">Meeting Date </string>
    <string name="auth_meeting_date">Meeting Date</string>
    <string name="email_id">Email Id </string>
    <string name="contact_no">Contact No</string>
    <string name="status">Status</string>
    <string name="applicant_name">Applicant Name :</string>
    <string name="_15_mar_2019">15 Mar 2019</string>
    <string name="_19_03_1_94">19/03/1/94</string>
    <string name="application_type">Application Type</string>
    <string name="connection_para_change">Connection Para. Change</string>
    <string name="application">Application :</string>
    <string name="single">Single</string>
    <string name="no">NO</string>
    <string name="sss">sss</string>
    <string name="_9815465165">9815465165</string>
    <string name="suez_gmail_com">suez@gmail.com</string>
    <string name="d12_room_no_16_marol">D12 ROOM NO 16 MAROL POLICE CAM,MAROL POLICE CAMP,MAROL POLICE CAMP VIJAY NAGAR-400025</string>
    <string name="mr_jaivant_sakharam">Mr. JAIVANT SAKHARAM</string>
    <string name="_15_mar_2019_12_54_pm">15-Mar-2019 12:54 PM</string>
    <string name="to_date">To Date:</string>
    <string name="from_date">From Date:</string>
    <string name="register">Register</string>
    <string name="registerationPage">Register</string>
    <string name="device_register">Device registered successfully</string>
    <string name="arrear_rs">Arrear (Rs.)</string>
    <string name="existing">Existing</string>
    <string name="description">Description</string>
    <string name="td_re_connection">TD RE-Connection</string>
    <string name="reconn_charges">Reconn. Charges</string>
    <string name="meter_Replacement">Meter Replacement Details</string>
    <string name="meter_installation">Meter Installation</string>
    <string name="app_date">App. Date</string>
    <string name="clear">Clear</string>
    <string name="attach_document">Attach Document</string>
    <string name="new_name">New Name</string>
    <string name="old_name">Old Name</string>
    <string name="name_correction">Name Correction</string>
    <string name="name_change">Name Change</string>
    <string name="name_change_correction">Name Change/Correction</string>
    <string name="new_">New</string>
    <string name="consumer_no">Consumer ID</string>
    <string name="consumer_no_man">Consumer ID *</string>
    <string name="consumer_nomap" translatable="false">Consumer ID</string>
    <string name="consumer_no_mandatory">Consumer ID*</string>
    <string name="complaint_no">Complaint No </string>
    <string name="_12_03_19_45">12/03/19/45</string>
    <string name="yashwant_nagar">YASHWANT NAGAR Coimbatore-415539 Coimbatore, Coimbatore, Tamil Nadu</string>
    <string name="consumer_address">Customer Address</string>
    <string name="consumer_address_mandatory">Consumer Address</string>
    <string name="_8646357050">8646357050</string>
    <string name="_111">111</string>
    <string name="jaivant_sakharam_lad">JAIVANT SAKHARAM LAD</string>
    <string name="technical_feasibility_plumber_work">Technical Feasibility/Plumber Work</string>
    <string name="feasibility_plumberWork_details">Feasibility PlumberWork Details</string>
    <string name="input">Input</string>
    <string name="issue_meter_to_fixer">Issue Meter To Fixer</string>
    <string name="mass_application_for_meter_installation">Mass Meter Installation</string>
    <string name="store_management">Store Management</string>
    <string name="meter_management_system">Meter Management System</string>
    <string name="meter_no">Meter No</string>
    <string name="meter_no_mandatory">Meter No*</string>
    <string name="meter_details">Meter Details :</string>
    <string name="note_meter_nos_are_automatically_adjusted_depending_on_the_initial">Note: Meter Nos. are automatically adjusted depending on the initial</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="make_code">Make Code</string>
    <string name="dispatch_date">Dispatch Date</string>
    <string name="meter_count">Meter Count</string>
    <string name="issued_to_person">Issued To Person</string>
    <string name="sr_no">Sr. No.</string>
    <string name="observation">Observation </string>
    <string name="today_s_completed_work">Total Complaints</string>
    <string name="version">App Version: </string>
    <string name="noConsumerComplaint">No Customer Complaint</string>
    <string name="connection_managment">Connection Management</string>
    <string name="complaint_dashboard">Dashboard</string>
    <string name="accept_payment">Accept Payment</string>
    <string name="Bill_Payment">Bill Payment</string>
</resources>