<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/row_linerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="horizontal"
    android:weightSum="6">

    <TextView
        android:id="@+id/srNoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/sr_no" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/dispatchDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1.8"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/dispatch_date" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/meterCountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1.4"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/meter_count" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/issuedToPersonTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/issued_to_person" />

</LinearLayout>