<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="5dp"
                android:text="@string/fill_details"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/employeeCloseImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/ic_close" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/fullDataLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/card_background"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/finish_fwd_to_section"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1.4"
                    android:entries="@array/finish"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@color/card_background"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/observation"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/observationSpinner"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1.4"
                    android:entries="@array/observation"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:text="@string/work_completion_date_amp_time"
                android:textColor="@color/secondaryColor"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateTimeTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/date_amp_time"
                app:boxCornerRadiusBottomEnd="0dp"
                app:boxCornerRadiusBottomStart="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusTopStart="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateTimeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:focusable="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:text="@string/remark"
                android:textColor="@color/secondaryColor"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/remarkTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/remark_160_character"
                app:boxCornerRadiusBottomEnd="0dp"
                app:boxCornerRadiusBottomStart="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusTopStart="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/remarkEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:lines="3"
                    android:maxLength="160"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/proceedButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/proceed"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="0dp"
                app:rippleColor="#33AAAAAA" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/otpLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/otpLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:text="@string/pls_enter_otp_below"
                android:textColor="@color/secondaryColor"
                android:textStyle="normal"
                android:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otpTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/otp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:focusable="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/submit_without_otp" />

            <TextView
                android:id="@+id/reasonLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:text="@string/pls_enter_reason_for_with_out_otp"
                android:textColor="@color/secondaryColor"
                android:textStyle="normal"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reasonTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/reason"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reasonEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:lines="3"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="5dp"
                app:rippleColor="#33AAAAAA" />

            <TextView
                android:id="@+id/goBackTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/selectableItemBackground"
                android:singleLine="true"
                android:text="@string/go_back"
                android:textAlignment="center"
                android:textColor="@color/primaryText"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>